--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ dnspython
 ffmpeg-python
 gitpython
 hachoir
+typing
+youtube-search-python
+git+https://github.com/PyrogramMod/PyrogramMod@main
 heroku3
 lyricsgenius
 motor==3.0.0
@@ -13,7 +16,7 @@ telegraph
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==1.4.16
+
 python-dotenv
 PyYAML>=5.3.1
 requests
